use .this annotation, clean up code, and use Math.clamp where possible